@@ -68,8 +68,6 @@ enum command_type {
 	/* Deprecated Commands. */
 	COMMAND_CHS,
 	COMMAND_CHSX,
-	COMMAND_SWITCH,
-	COMMAND_NEWS,
 
 	/* Ciel Commands */
 	COMMAND_CIEL,
@@ -177,146 +175,6 @@ enum select_command_param {
 enum se_command_param {
 	SE_PARAM_FILE = 1,
 	SE_PARAM_OPTION,
-};
-
-/* switchコマンドのパラメータ */
-enum switch_command_param {
-	SWITCH_PARAM_PARENT_M1 = 1,
-	SWITCH_PARAM_PARENT_M2,
-	SWITCH_PARAM_PARENT_M3,
-	SWITCH_PARAM_PARENT_M4,
-	SWITCH_PARAM_PARENT_M5,
-	SWITCH_PARAM_PARENT_M6,
-	SWITCH_PARAM_PARENT_M7,
-	SWITCH_PARAM_PARENT_M8,
-	SWITCH_PARAM_CHILD1_L1,
-	SWITCH_PARAM_CHILD1_M1,
-	SWITCH_PARAM_CHILD1_L2,
-	SWITCH_PARAM_CHILD1_M2,
-	SWITCH_PARAM_CHILD1_L3,
-	SWITCH_PARAM_CHILD1_M3,
-	SWITCH_PARAM_CHILD1_L4,
-	SWITCH_PARAM_CHILD1_M4,
-	SWITCH_PARAM_CHILD1_L5,
-	SWITCH_PARAM_CHILD1_M5,
-	SWITCH_PARAM_CHILD1_L6,
-	SWITCH_PARAM_CHILD1_M6,
-	SWITCH_PARAM_CHILD1_L7,
-	SWITCH_PARAM_CHILD1_M7,
-	SWITCH_PARAM_CHILD1_L8,
-	SWITCH_PARAM_CHILD1_M8,
-	SWITCH_PARAM_CHILD2_L1,
-	SWITCH_PARAM_CHILD2_M1,
-	SWITCH_PARAM_CHILD2_L2,
-	SWITCH_PARAM_CHILD2_M2,
-	SWITCH_PARAM_CHILD2_L3,
-	SWITCH_PARAM_CHILD2_M3,
-	SWITCH_PARAM_CHILD2_L4,
-	SWITCH_PARAM_CHILD2_M4,
-	SWITCH_PARAM_CHILD2_L5,
-	SWITCH_PARAM_CHILD2_M5,
-	SWITCH_PARAM_CHILD2_L6,
-	SWITCH_PARAM_CHILD2_M6,
-	SWITCH_PARAM_CHILD2_L7,
-	SWITCH_PARAM_CHILD2_M7,
-	SWITCH_PARAM_CHILD2_L8,
-	SWITCH_PARAM_CHILD2_M8,
-	SWITCH_PARAM_CHILD3_L1,
-	SWITCH_PARAM_CHILD3_M1,
-	SWITCH_PARAM_CHILD3_L2,
-	SWITCH_PARAM_CHILD3_M2,
-	SWITCH_PARAM_CHILD3_L3,
-	SWITCH_PARAM_CHILD3_M3,
-	SWITCH_PARAM_CHILD3_L4,
-	SWITCH_PARAM_CHILD3_M4,
-	SWITCH_PARAM_CHILD3_L5,
-	SWITCH_PARAM_CHILD3_M5,
-	SWITCH_PARAM_CHILD3_L6,
-	SWITCH_PARAM_CHILD3_M6,
-	SWITCH_PARAM_CHILD3_L7,
-	SWITCH_PARAM_CHILD3_M7,
-	SWITCH_PARAM_CHILD3_L8,
-	SWITCH_PARAM_CHILD3_M8,
-	SWITCH_PARAM_CHILD4_L1,
-	SWITCH_PARAM_CHILD4_M1,
-	SWITCH_PARAM_CHILD4_L2,
-	SWITCH_PARAM_CHILD4_M2,
-	SWITCH_PARAM_CHILD4_L3,
-	SWITCH_PARAM_CHILD4_M3,
-	SWITCH_PARAM_CHILD4_L4,
-	SWITCH_PARAM_CHILD4_M4,
-	SWITCH_PARAM_CHILD4_L5,
-	SWITCH_PARAM_CHILD4_M5,
-	SWITCH_PARAM_CHILD4_L6,
-	SWITCH_PARAM_CHILD4_M6,
-	SWITCH_PARAM_CHILD4_L7,
-	SWITCH_PARAM_CHILD4_M7,
-	SWITCH_PARAM_CHILD4_L8,
-	SWITCH_PARAM_CHILD4_M8,
-	SWITCH_PARAM_CHILD5_L1,
-	SWITCH_PARAM_CHILD5_M1,
-	SWITCH_PARAM_CHILD5_L2,
-	SWITCH_PARAM_CHILD5_M2,
-	SWITCH_PARAM_CHILD5_L3,
-	SWITCH_PARAM_CHILD5_M3,
-	SWITCH_PARAM_CHILD5_L4,
-	SWITCH_PARAM_CHILD5_M4,
-	SWITCH_PARAM_CHILD5_L5,
-	SWITCH_PARAM_CHILD5_M5,
-	SWITCH_PARAM_CHILD5_L6,
-	SWITCH_PARAM_CHILD5_M6,
-	SWITCH_PARAM_CHILD5_L7,
-	SWITCH_PARAM_CHILD5_M7,
-	SWITCH_PARAM_CHILD5_L8,
-	SWITCH_PARAM_CHILD5_M8,
-	SWITCH_PARAM_CHILD6_L1,
-	SWITCH_PARAM_CHILD6_M1,
-	SWITCH_PARAM_CHILD6_L2,
-	SWITCH_PARAM_CHILD6_M2,
-	SWITCH_PARAM_CHILD6_L3,
-	SWITCH_PARAM_CHILD6_M3,
-	SWITCH_PARAM_CHILD6_L4,
-	SWITCH_PARAM_CHILD6_M4,
-	SWITCH_PARAM_CHILD6_L5,
-	SWITCH_PARAM_CHILD6_M5,
-	SWITCH_PARAM_CHILD6_L6,
-	SWITCH_PARAM_CHILD6_M6,
-	SWITCH_PARAM_CHILD6_L7,
-	SWITCH_PARAM_CHILD6_M7,
-	SWITCH_PARAM_CHILD6_L8,
-	SWITCH_PARAM_CHILD6_M8,
-	SWITCH_PARAM_CHILD7_L1,
-	SWITCH_PARAM_CHILD7_M1,
-	SWITCH_PARAM_CHILD7_L2,
-	SWITCH_PARAM_CHILD7_M2,
-	SWITCH_PARAM_CHILD7_L3,
-	SWITCH_PARAM_CHILD7_M3,
-	SWITCH_PARAM_CHILD7_L4,
-	SWITCH_PARAM_CHILD7_M4,
-	SWITCH_PARAM_CHILD7_L5,
-	SWITCH_PARAM_CHILD7_M5,
-	SWITCH_PARAM_CHILD7_L6,
-	SWITCH_PARAM_CHILD7_M6,
-	SWITCH_PARAM_CHILD7_L7,
-	SWITCH_PARAM_CHILD7_M7,
-	SWITCH_PARAM_CHILD7_L8,
-	SWITCH_PARAM_CHILD7_M8,
-	SWITCH_PARAM_CHILD8_L1,
-	SWITCH_PARAM_CHILD8_M1,
-	SWITCH_PARAM_CHILD8_L2,
-	SWITCH_PARAM_CHILD8_M2,
-	SWITCH_PARAM_CHILD8_L3,
-	SWITCH_PARAM_CHILD8_M3,
-	SWITCH_PARAM_CHILD8_L4,
-	SWITCH_PARAM_CHILD8_M4,
-	SWITCH_PARAM_CHILD8_L5,
-	SWITCH_PARAM_CHILD8_M5,
-	SWITCH_PARAM_CHILD8_L6,
-	SWITCH_PARAM_CHILD8_M6,
-	SWITCH_PARAM_CHILD8_L7,
-	SWITCH_PARAM_CHILD8_M7,
-	SWITCH_PARAM_CHILD8_L8,
-	SWITCH_PARAM_CHILD8_M8,
 };
 
 /* choose/ichooseコマンドのパラメータ */
